src/less/core.less
// Common Colors

@black: #333333;
@text: #666666;
@grey: #cccccc;
@blue: #5294e2;
@darkblue: #3366cc;
@marble: #f5f5f5;

// Pastel Colors

@pastelGreen: #87d838;
@pastelRed: #f67878;
@pastelOrange: #ff9900;
@pastelPurple: #ad7fa8;

// Technically not Pastel and not Common, I'm picky.

@red: #ef2929;
@yellow: #ffcc00;

// #region Solbit Overrides

@button-bg-color: @blue;
@button-menu-inactive-color: @black;
@link: @blue;
@page-margin: 10%;
@navigation-active-link: @blue;
@navigation-bg-color: @marble;
@navigation-link-color: @blue;

// #endregion

body {
	h1, h2, h3, h4, h5, h6 { // Headers
		font-weight: normal;
	}
}

